# hfd-service

./: .gitignore  CMakeLists.txt  Readme.md
android/hybris/: Android.mk  hfd_hardware_light_hidl_for_hybris.cpp  hfd_hardware_vibrator_hidl_for_hybris.cpp
data/: com.lomiri.hfd.conf  com.lomiri.hfd.service  com.lomiri.hfd.service.in  com.lomiri.hfd.xml  hfd-service.conf  hfd-service.service
debian/: changelog  control  hfd-service-tools.install  hfd-service.install  libqt5feedback5-hfd.install  qml-module-hfd.install
include/hfd/: visibility.h
include/hfd/hardware/: light.h  vibrator.h
qt/: CMakeLists.txt
qt/demo/: feedback.qml  leds.qml
qt/feedback-plugin/: CMakeLists.txt  feedback.json  feedback.qrc  hfd_feedback.cpp  hfd_feedback.h
qt/qml/: CMakeLists.txt  leds.cpp  leds.h  plugin.cpp  plugin.h  qmldir
src/: CMakeLists.txt  common.h  dbusAdaptor.h  leds-binder.cpp  leds-binder.h  leds-hidl.cpp  leds-hidl.h  leds-hybris.cpp  leds-hybris.h  leds-sysfs.cpp  leds-sysfs.h  leds.cpp  leds.h  repeatThread.h  rgba.h  service.cpp  utils.h  vibrator-binder.cpp  vibrator-binder.h  vibrator-ff.cpp  vibrator-ff.h  vibrator-hidl.cpp  vibrator-hidl.h  vibrator-legacy.cpp  vibrator-legacy.h  vibrator-sysfs.cpp  vibrator-sysfs.h  vibrator.cpp  vibrator.h
src/hardware/: android_hw_module.h  hfd_api.cpp
src/udev/: CMakeLists.txt  udev-cpp.h  udev.cpp  udevDevice.cpp  udevEnumerate.cpp  udevMonitor.cpp
tools/: CMakeLists.txt  hfd_cli.cpp  hfd_leds.cpp  hfd_vibrator.cpp
